# socialrobot_ros

etc/: bluetooth_config.yaml  bluetooth_reconnect.txt  charger.py  map.pgm  testMap.pgm  testMap.yaml
etc/ROBOTIS/DynamixelWizard2/: InstallationLog.txt  components.xml  libEGL.so.1  libQt5AutoUpdaterCore.so.2  libQt5AutoUpdaterGui.so.2  libQt5SerialBus.so.5  maintenancetool.ini
etc/ROBOTIS/DynamixelWizard2/installerResources/com.robotis.wizard2/: 2.0.7.0bearer.txt  2.0.7.0content.txt  2.0.7.0iconengines.txt  2.0.7.0imageformats.txt  2.0.7.0platforminputcontexts.txt  2.0.7.0platforms.txt  2.0.7.0xcbglintegrations.txt
social_arm/social_robot_arm_sdk/config/: SOCIAL_ROBOT_ARM.robot
social_bringup/launch/: ksia_bringup.launch  silbot.launch
social_motion/robocare_sound/: CMakeLists.txt  package.xml  setup.py
social_motion/robocare_sound/scripts/: sound_node2.py
social_motion/robocare_tts/src/: tts_node.cpp  tts_node.cpp.bak
social_motion/social_motion_player/launch/: motion.launch
social_motion/social_motion_res/motion/: attention_ksia.json  hand_shake_ksia.json  polite_hello_ksia.json  right_hand_wink.json  test.json
social_nav/rplidar_ros/launch/: double_lidar.launch  rplidar.launch  urg_lidar.launch
